atktablecell: use content of the pointer instead of pointer itself

Fixes
https://bugzilla.gnome.org/show_bug.cgi?id=755548